--- a/po/cs.po
+++ b/po/cs.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-01 20:01-0400\n"
+"POT-Creation-Date: 2025-07-03 15:09-0400\n"
 "PO-Revision-Date: 2025-06-30 13:10+0000\n"
 "Last-Translator: \"M.M.\" <martin.miscikms@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/protonplus/"
@@ -28,46 +28,67 @@ msgstr ""
 msgid "Special thanks to"
 msgstr "Zvláštní poděkování patří"
 
-#: src/widgets/window.vala:32
-#, c-format
-msgid "Welcome to %s"
-msgstr "Vítá vás %s"
-
-#: src/widgets/window.vala:32
-msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-msgstr ""
-"Chcete-li začít, nainstalujte si Steam, Lutris, Láhve nebo Heroic Games "
-"Launcher."
-
-#: src/widgets/window.vala:42
+#: src/widgets/window.vala:40
 msgid "Donate"
 msgstr "Podpořit"
 
-#: src/widgets/window.vala:45
+#: src/widgets/window.vala:43
 #, fuzzy
 msgid "_Installed Only"
 msgstr "Nainstalovat %s"
 
-#: src/widgets/window.vala:52
+#: src/widgets/window.vala:50
 msgid "_Keyboard Shortcuts"
 msgstr "_Klávesové zkratky"
 
-#: src/widgets/window.vala:53
+#: src/widgets/window.vala:51
 msgid "_About ProtonPlus"
 msgstr "O _aplikaci ProtonPlus"
 
-#: src/widgets/window.vala:60
+#: src/widgets/window.vala:58
 msgid "Main Menu"
 msgstr "Hlavní nabídka"
 
-#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
-#: src/models/launchers/steam.vala:42
+#: src/widgets/window.vala:63
 msgid "Runners"
 msgstr "Spouštěče"
 
-#: src/widgets/window.vala:66
+#: src/widgets/window.vala:64
 msgid "Games"
 msgstr ""
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "An error ocurred"
+msgstr "Vyskytla se chyba"
+
+#: src/widgets/window.vala:93
+msgid "There was an error when trying to load the launchers."
+msgstr ""
+
+#: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
+#: src/widgets/runners/install-dialog.vala:54
+#: src/widgets/runners/upgrade-dialog.vala:56
+#: src/widgets/games/games-box.vala:240
+#: src/widgets/games/mass-edit-dialog.vala:147
+#: src/widgets/games/shortcut-button.vala:38
+#: src/widgets/games/shortcut-button.vala:47
+#: src/widgets/games/launch-options-dialog.vala:57
+#: src/widgets/games/default-tool-dialog.vala:60
+#: src/widgets/games/compatibility-tool-dropdown.vala:75
+msgid "Please report this issue on GitHub."
+msgstr "Prosím oznamte tuto chybu na GitHubu."
+
+#: src/widgets/window.vala:114
+#, c-format
+msgid "Welcome to %s"
+msgstr "Vítá vás %s"
+
+#: src/widgets/window.vala:114
+msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
+msgstr ""
+"Chcete-li začít, nainstalujte si Steam, Lutris, Láhve nebo Heroic Games "
+"Launcher."
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -149,19 +170,6 @@ msgstr "Chyba"
 #, c-format
 msgid "When trying to remove %s an error occured."
 msgstr ""
-
-#: src/widgets/runners/remove-dialog.vala:49
-#: src/widgets/runners/install-dialog.vala:54
-#: src/widgets/runners/upgrade-dialog.vala:56
-#: src/widgets/games/games-box.vala:240
-#: src/widgets/games/mass-edit-dialog.vala:147
-#: src/widgets/games/shortcut-button.vala:38
-#: src/widgets/games/shortcut-button.vala:47
-#: src/widgets/games/launch-options-dialog.vala:57
-#: src/widgets/games/default-tool-dialog.vala:60
-#: src/widgets/games/compatibility-tool-dropdown.vala:75
-msgid "Please report this issue on GitHub."
-msgstr "Prosím oznamte tuto chybu na GitHubu."
 
 #: src/widgets/runners/install-dialog.vala:23
 #: src/widgets/runners/upgrade-dialog.vala:23
@@ -530,74 +538,20 @@ msgstr "Moderní správce nástrojů kompatibility pro Linux."
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr ""
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
-#: src/models/launchers/lutris.vala:36
-msgid "Compatibility tools for running Windows software on Linux."
-msgstr "Nástroje kompatibility pro spouštění softwaru pro Windows na Linuxu."
-
-#: src/models/launchers/bottles.vala:32 src/models/launchers/lutris.vala:39
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+#: src/models/runners/steamtinkerlaunch.vala:6
+msgid ""
+"Steam tool for easy, graphical configuration of your other compatibility "
+"tools for both Windows games and native Linux games."
 msgstr ""
-"Implementace Direct3D 8, 9, 10 a 11 pro Linux/Wine založená na Vulkanu."
+"Nástroj Steamu pro snadnou grafickou konfiguraci vašich dalších nástrojů "
+"kompatibility pro Windows hry i nativní hry pro Linux."
 
-#: src/models/launchers/hgl.vala:29 src/models/launchers/lutris.vala:33
+#: src/main.vala:18
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr ""
 "Nástroje kompatibility od Valve pro spouštění softwaru pro Windows na Linuxu."
 
-#: src/models/launchers/lutris.vala:42
-msgid ""
-"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
-"top of Vulkan."
-msgstr ""
-"Varianta VKD3D z Wine, jejímž cílem je implementovat plné rozhraní API "
-"Direct3D 12 na Vulkanu."
-
-#: src/models/runners/boxtron.vala:6
-msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
-msgstr ""
-"Nástroj kompatibility Steam pro spouštění her pro DOS pomocí DOSBoxu pro "
-"Linux."
-
-#: src/models/runners/dxvk-sarek.vala:6
-#: src/models/runners/dxvk-async-sarek.vala:6
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "DXVK verze která fungovala před Vulkanem verze 1.3"
-
-#: src/models/runners/kron4ek-wine-builds-staging-tkg.vala:7
-msgid "Wine build with the Staging patchset and many other useful patches."
-msgstr ""
-"Sestavení Wine se sadou patchů Staging a mnoha dalšími užitečnými patchi."
-
-#: src/models/runners/kron4ek-wine-builds-staging.vala:7
-msgid "Wine build with the Staging patchset."
-msgstr "Sestavení Wine se sadou patchů Staging."
-
-#: src/models/runners/kron4ek-wine-builds-vanilla.vala:7
-msgid "Wine build compiled from the official WineHQ sources."
-msgstr "Sestavení Wine zkompilované z oficiálních zdrojů WineHQ."
-
-#: src/models/runners/luxtorpeda.vala:6
-msgid ""
-"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
-msgstr ""
-"Luxtorpeda poskytuje nativní linuxové herní enginy pro některé hry dostupné "
-"pouze pro Windows."
-
-#: src/models/runners/northstar-proton.vala:6
-msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr ""
-"Vlastní sestavení Protonu pro spouštění klienta Northstar pro Titanfall 2."
-
-#: src/models/runners/proton-ge-rstp.vala:6
-msgid ""
-"Steam compatibility tool based on Proton-GE with additional patches to "
-"improve RTSP codecs for VRChat."
-msgstr ""
-"Nástroj kompatibility Steam založený na Proton-GE s dalšími patchi pro "
-"vylepšení kodeků RTSP pro VRChat."
-
-#: src/models/runners/proton-ge.vala:6
+#: src/main.vala:19
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
@@ -605,20 +559,7 @@ msgstr ""
 "Nástroj kompatibility Steam pro spouštění her pro Windows s vylepšeními "
 "oproti výchozímu Protonu od Valve."
 
-#: src/models/runners/proton-tkg.vala:6
-msgid "Custom Proton build for running Windows games, based on Wine-tkg."
-msgstr ""
-"Vlastní sestavení Protonu pro spouštění her pro Windows, založené na Wine-"
-"tkg."
-
-#: src/models/runners/roberta.vala:6
-msgid ""
-"Steam compatibility tool for running adventure games using ScummVM for Linux."
-msgstr ""
-"Nástroj kompatibility Steam pro spouštění her z žánru adventur pomocí "
-"ScummVM pro Linux."
-
-#: src/models/runners/proton-cachyos.vala:14
+#: src/main.vala:20
 #, fuzzy
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
@@ -627,7 +568,7 @@ msgstr ""
 "Nástroj kompatibility Steam pro spouštění her pro Windows s vylepšeními "
 "oproti výchozímu Protonu od Valve."
 
-#: src/models/runners/proton-em.vala:6
+#: src/main.vala:21
 #, fuzzy
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
@@ -637,23 +578,101 @@ msgstr ""
 "Nástroj kompatibility Steam pro spouštění her pro Windows s vylepšeními "
 "oproti výchozímu Protonu od Valve."
 
-#: src/models/runners/proton-sarek.vala:6
-#: src/models/runners/proton-sarek-async.vala:6
-#, fuzzy, c-format
+#: src/main.vala:22
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr ""
+"Vlastní sestavení Protonu pro spouštění her pro Windows, založené na Wine-"
+"tkg."
+
+#: src/main.vala:23
+#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
-"GPUs, with %s."
+"GPUs, with DXVK."
 msgstr ""
 "Nástroj kompatibility Steam založený na Proton-GE s dalšími patchi pro "
 "vylepšení kodeků RTSP pro VRChat."
 
-#: src/models/runners/steamtinkerlaunch.vala:6
+#: src/main.vala:24
+#, fuzzy
 msgid ""
-"Steam tool for easy, graphical configuration of your other compatibility "
-"tools for both Windows games and native Linux games."
+"Steam compatibility tool based on Proton-GE with modifications for very old "
+"GPUs, with DXVK-Async."
 msgstr ""
-"Nástroj Steamu pro snadnou grafickou konfiguraci vašich dalších nástrojů "
-"kompatibility pro Windows hry i nativní hry pro Linux."
+"Nástroj kompatibility Steam založený na Proton-GE s dalšími patchi pro "
+"vylepšení kodeků RTSP pro VRChat."
+
+#: src/main.vala:25
+msgid ""
+"Steam compatibility tool based on Proton-GE with additional patches to "
+"improve RTSP codecs for VRChat."
+msgstr ""
+"Nástroj kompatibility Steam založený na Proton-GE s dalšími patchi pro "
+"vylepšení kodeků RTSP pro VRChat."
+
+#: src/main.vala:26
+msgid "Custom Proton build for running the Northstar client for Titanfall 2."
+msgstr ""
+"Vlastní sestavení Protonu pro spouštění klienta Northstar pro Titanfall 2."
+
+#: src/main.vala:27
+msgid ""
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
+msgstr ""
+"Luxtorpeda poskytuje nativní linuxové herní enginy pro některé hry dostupné "
+"pouze pro Windows."
+
+#: src/main.vala:28
+msgid ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr ""
+"Nástroj kompatibility Steam pro spouštění her z žánru adventur pomocí "
+"ScummVM pro Linux."
+
+#: src/main.vala:29
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr ""
+"Nástroj kompatibility Steam pro spouštění her pro DOS pomocí DOSBoxu pro "
+"Linux."
+
+#: src/main.vala:30
+msgid "Compatibility tools for running Windows software on Linux."
+msgstr "Nástroje kompatibility pro spouštění softwaru pro Windows na Linuxu."
+
+#: src/main.vala:31
+msgid "Wine build compiled from the official WineHQ sources."
+msgstr "Sestavení Wine zkompilované z oficiálních zdrojů WineHQ."
+
+#: src/main.vala:32
+msgid "Wine build with the Staging patchset."
+msgstr "Sestavení Wine se sadou patchů Staging."
+
+#: src/main.vala:33
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr ""
+"Sestavení Wine se sadou patchů Staging a mnoha dalšími užitečnými patchi."
+
+#: src/main.vala:34
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgstr ""
+"Implementace Direct3D 8, 9, 10 a 11 pro Linux/Wine založená na Vulkanu."
+
+#: src/main.vala:35
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgstr "DXVK verze která fungovala před Vulkanem verze 1.3"
+
+#: src/main.vala:36
+#, fuzzy
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr "DXVK verze která fungovala před Vulkanem verze 1.3"
+
+#: src/main.vala:37
+msgid ""
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
+msgstr ""
+"Varianta VKD3D z Wine, jejímž cílem je implementovat plné rozhraní API "
+"Direct3D 12 na Vulkanu."
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
