--- a/po/de.po
+++ b/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-01 20:01-0400\n"
+"POT-Creation-Date: 2025-07-03 15:09-0400\n"
 "PO-Revision-Date: 2025-07-02 15:08+0200\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/protonplus/"
@@ -30,45 +30,66 @@ msgstr "Webseite"
 msgid "Special thanks to"
 msgstr "Spezieller Dank an"
 
-#: src/widgets/window.vala:32
+#: src/widgets/window.vala:40
+msgid "Donate"
+msgstr "Spenden"
+
+#: src/widgets/window.vala:43
+msgid "_Installed Only"
+msgstr "_Nur installierte"
+
+#: src/widgets/window.vala:50
+msgid "_Keyboard Shortcuts"
+msgstr "_Tastenkombinationen"
+
+#: src/widgets/window.vala:51
+msgid "_About ProtonPlus"
+msgstr "_Über ProtonPlus"
+
+#: src/widgets/window.vala:58
+msgid "Main Menu"
+msgstr "Hauptmenü"
+
+#: src/widgets/window.vala:63
+msgid "Runners"
+msgstr "Ausführungswerkzeuge"
+
+#: src/widgets/window.vala:64
+msgid "Games"
+msgstr "Spiele"
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "An error ocurred"
+msgstr "Ein Fehler ist aufgetreten"
+
+#: src/widgets/window.vala:93
+msgid "There was an error when trying to load the launchers."
+msgstr ""
+
+#: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
+#: src/widgets/runners/install-dialog.vala:54
+#: src/widgets/runners/upgrade-dialog.vala:56
+#: src/widgets/games/games-box.vala:240
+#: src/widgets/games/mass-edit-dialog.vala:147
+#: src/widgets/games/shortcut-button.vala:38
+#: src/widgets/games/shortcut-button.vala:47
+#: src/widgets/games/launch-options-dialog.vala:57
+#: src/widgets/games/default-tool-dialog.vala:60
+#: src/widgets/games/compatibility-tool-dropdown.vala:75
+msgid "Please report this issue on GitHub."
+msgstr "Bitte melden Sie dieses Problem auf GitHub."
+
+#: src/widgets/window.vala:114
 #, c-format
 msgid "Welcome to %s"
 msgstr "Willkommen zu %s"
 
-#: src/widgets/window.vala:32
+#: src/widgets/window.vala:114
 msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
 msgstr ""
 "Installieren Sie Steam, Lutris, Bottles oder Heroic Games Launcher, um "
 "loszulegen."
-
-#: src/widgets/window.vala:42
-msgid "Donate"
-msgstr "Spenden"
-
-#: src/widgets/window.vala:45
-msgid "_Installed Only"
-msgstr "_Nur installierte"
-
-#: src/widgets/window.vala:52
-msgid "_Keyboard Shortcuts"
-msgstr "_Tastenkombinationen"
-
-#: src/widgets/window.vala:53
-msgid "_About ProtonPlus"
-msgstr "_Über ProtonPlus"
-
-#: src/widgets/window.vala:60
-msgid "Main Menu"
-msgstr "Hauptmenü"
-
-#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
-#: src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "Ausführungswerkzeuge"
-
-#: src/widgets/window.vala:66
-msgid "Games"
-msgstr "Spiele"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -150,19 +171,6 @@ msgstr "Fehler"
 #, c-format
 msgid "When trying to remove %s an error occured."
 msgstr "Beim Versuch, %s zu entfernen, ist ein Fehler aufgetreten."
-
-#: src/widgets/runners/remove-dialog.vala:49
-#: src/widgets/runners/install-dialog.vala:54
-#: src/widgets/runners/upgrade-dialog.vala:56
-#: src/widgets/games/games-box.vala:240
-#: src/widgets/games/mass-edit-dialog.vala:147
-#: src/widgets/games/shortcut-button.vala:38
-#: src/widgets/games/shortcut-button.vala:47
-#: src/widgets/games/launch-options-dialog.vala:57
-#: src/widgets/games/default-tool-dialog.vala:60
-#: src/widgets/games/compatibility-tool-dropdown.vala:75
-msgid "Please report this issue on GitHub."
-msgstr "Bitte melden Sie dieses Problem auf GitHub."
 
 #: src/widgets/runners/install-dialog.vala:23
 #: src/widgets/runners/upgrade-dialog.vala:23
@@ -547,73 +555,20 @@ msgstr ""
 "Beim Versuch, das Kompatibilitätswerkzeug von %s zu ändern, ist ein Fehler "
 "aufgetreten."
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
-#: src/models/launchers/lutris.vala:36
-msgid "Compatibility tools for running Windows software on Linux."
-msgstr "Kompatibilitätstool zum Ausführen von Windows-Spielen unter Linux."
-
-#: src/models/launchers/bottles.vala:32 src/models/launchers/lutris.vala:39
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+#: src/models/runners/steamtinkerlaunch.vala:6
+msgid ""
+"Steam tool for easy, graphical configuration of your other compatibility "
+"tools for both Windows games and native Linux games."
 msgstr ""
-"Vulkan basierte Implementierung von Direct3D 9, 10 und 11 für Linux/Wine."
+"Steam Werkzeug für einfache, grafische Konfiguration anderer "
+"Kompatibilitätswerkzeuge für sowohl Windows-Spiele als auch native Linux-"
+"Spiele."
 
-#: src/models/launchers/hgl.vala:29 src/models/launchers/lutris.vala:33
+#: src/main.vala:18
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr "Kompatibilitätstool zum Ausführen von Windows-Spielen unter Linux."
 
-#: src/models/launchers/lutris.vala:42
-msgid ""
-"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
-"top of Vulkan."
-msgstr ""
-"Variante von Wine's VKD3D, die darauf abzielt, die volle Direct3D 12 API auf "
-"Vulkan zu implementieren."
-
-#: src/models/runners/boxtron.vala:6
-msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
-msgstr ""
-"Steam Kompatibilitätswerkzeug um DOS-Spiele mit der nativen Linux DOSBox zu "
-"starten."
-
-#: src/models/runners/dxvk-sarek.vala:6
-#: src/models/runners/dxvk-async-sarek.vala:6
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "DXVK Builds, die mit Vor-Vulkan 1.3 Versionen funktionieren"
-
-#: src/models/runners/kron4ek-wine-builds-staging-tkg.vala:7
-msgid "Wine build with the Staging patchset and many other useful patches."
-msgstr ""
-"Wine gebaut mit den Staging Patchesets und mit vielen nützlichen Patches."
-
-#: src/models/runners/kron4ek-wine-builds-staging.vala:7
-msgid "Wine build with the Staging patchset."
-msgstr "Wine gebaut mit dem Staging Patcheset."
-
-#: src/models/runners/kron4ek-wine-builds-vanilla.vala:7
-msgid "Wine build compiled from the official WineHQ sources."
-msgstr "Wine-Build gebaut von den offiziellen WineHQ-Quellen."
-
-#: src/models/runners/luxtorpeda.vala:6
-msgid ""
-"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
-msgstr ""
-"Luxtorpeda bietet Linux-native Spiele-Engines für bestimmte Windows-Spiele."
-
-#: src/models/runners/northstar-proton.vala:6
-msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr ""
-"Benutzerdefinierter Proton-Build zum Ausführen des Northstar-Clients für "
-"Titanfall 2."
-
-#: src/models/runners/proton-ge-rstp.vala:6
-msgid ""
-"Steam compatibility tool based on Proton-GE with additional patches to "
-"improve RTSP codecs for VRChat."
-msgstr ""
-"Steam Kompatibilitätswerkzeug basierend auf Proton-GE mit zusätzlichen "
-"Patches um RTSP codecs für VRChat zu verbessern."
-
-#: src/models/runners/proton-ge.vala:6
+#: src/main.vala:19
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
@@ -621,20 +576,7 @@ msgstr ""
 "Steam Kompatibilitätswerkzeug um Windowsspiele zu Starten mit Verbesserungen "
 "gegenüber Valves Standard-Proton."
 
-#: src/models/runners/proton-tkg.vala:6
-msgid "Custom Proton build for running Windows games, based on Wine-tkg."
-msgstr ""
-"Benutzerdefinierter Proton-Build zum Ausführen von Windows-Spielen basiert "
-"auf Wine-tkg."
-
-#: src/models/runners/roberta.vala:6
-msgid ""
-"Steam compatibility tool for running adventure games using ScummVM for Linux."
-msgstr ""
-"Steam Kompatibilitätswerkzeug um Abenteuer-Spiele mit der nativen Linux "
-"ScummVM zu starten."
-
-#: src/models/runners/proton-cachyos.vala:14
+#: src/main.vala:20
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
@@ -642,7 +584,7 @@ msgstr ""
 "Steam Kompatibilitätswerkzeug aus der CachyOS Linux Distribution um "
 "Windowsspiele zu Starten mit Verbesserungen gegenüber Valves Standard-Proton."
 
-#: src/models/runners/proton-em.vala:6
+#: src/main.vala:21
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton. By Etaash Mathamsetty adding FSR4 support and wine "
@@ -652,24 +594,101 @@ msgstr ""
 "Verbesserungen gegenüber dem Standard-Proton von Valve. Von Etaash "
 "Mathamsetty mit FSR4-Unterstützung und wine wayland tweaks."
 
-#: src/models/runners/proton-sarek.vala:6
-#: src/models/runners/proton-sarek-async.vala:6
-#, c-format
+#: src/main.vala:22
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr ""
+"Benutzerdefinierter Proton-Build zum Ausführen von Windows-Spielen basiert "
+"auf Wine-tkg."
+
+#: src/main.vala:23
+#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
-"GPUs, with %s."
+"GPUs, with DXVK."
 msgstr ""
 "Steam-Kompatibilitätstool basierend auf Proton-GE mit Modifikationen für "
 "sehr alte GPUs, mit %s."
 
-#: src/models/runners/steamtinkerlaunch.vala:6
+#: src/main.vala:24
+#, fuzzy
 msgid ""
-"Steam tool for easy, graphical configuration of your other compatibility "
-"tools for both Windows games and native Linux games."
+"Steam compatibility tool based on Proton-GE with modifications for very old "
+"GPUs, with DXVK-Async."
 msgstr ""
-"Steam Werkzeug für einfache, grafische Konfiguration anderer "
-"Kompatibilitätswerkzeuge für sowohl Windows-Spiele als auch native Linux-"
-"Spiele."
+"Steam-Kompatibilitätstool basierend auf Proton-GE mit Modifikationen für "
+"sehr alte GPUs, mit %s."
+
+#: src/main.vala:25
+msgid ""
+"Steam compatibility tool based on Proton-GE with additional patches to "
+"improve RTSP codecs for VRChat."
+msgstr ""
+"Steam Kompatibilitätswerkzeug basierend auf Proton-GE mit zusätzlichen "
+"Patches um RTSP codecs für VRChat zu verbessern."
+
+#: src/main.vala:26
+msgid "Custom Proton build for running the Northstar client for Titanfall 2."
+msgstr ""
+"Benutzerdefinierter Proton-Build zum Ausführen des Northstar-Clients für "
+"Titanfall 2."
+
+#: src/main.vala:27
+msgid ""
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
+msgstr ""
+"Luxtorpeda bietet Linux-native Spiele-Engines für bestimmte Windows-Spiele."
+
+#: src/main.vala:28
+msgid ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr ""
+"Steam Kompatibilitätswerkzeug um Abenteuer-Spiele mit der nativen Linux "
+"ScummVM zu starten."
+
+#: src/main.vala:29
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr ""
+"Steam Kompatibilitätswerkzeug um DOS-Spiele mit der nativen Linux DOSBox zu "
+"starten."
+
+#: src/main.vala:30
+msgid "Compatibility tools for running Windows software on Linux."
+msgstr "Kompatibilitätstool zum Ausführen von Windows-Spielen unter Linux."
+
+#: src/main.vala:31
+msgid "Wine build compiled from the official WineHQ sources."
+msgstr "Wine-Build gebaut von den offiziellen WineHQ-Quellen."
+
+#: src/main.vala:32
+msgid "Wine build with the Staging patchset."
+msgstr "Wine gebaut mit dem Staging Patcheset."
+
+#: src/main.vala:33
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr ""
+"Wine gebaut mit den Staging Patchesets und mit vielen nützlichen Patches."
+
+#: src/main.vala:34
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgstr ""
+"Vulkan basierte Implementierung von Direct3D 9, 10 und 11 für Linux/Wine."
+
+#: src/main.vala:35
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgstr "DXVK Builds, die mit Vor-Vulkan 1.3 Versionen funktionieren"
+
+#: src/main.vala:36
+#, fuzzy
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr "DXVK Builds, die mit Vor-Vulkan 1.3 Versionen funktionieren"
+
+#: src/main.vala:37
+msgid ""
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
+msgstr ""
+"Variante von Wine's VKD3D, die darauf abzielt, die volle Direct3D 12 API auf "
+"Vulkan zu implementieren."
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
