--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-01 20:01-0400\n"
+"POT-Creation-Date: 2025-07-03 15:09-0400\n"
 "PO-Revision-Date: 2025-06-17 08:02+0000\n"
 "Last-Translator: Mie <miesiva@tutanota.com>\n"
 "Language-Team: Indonesian <https://hosted.weblate.org/projects/protonplus/"
@@ -28,44 +28,65 @@ msgstr "Laman web"
 msgid "Special thanks to"
 msgstr "Terima kasih khusus kepada"
 
-#: src/widgets/window.vala:32
-#, c-format
-msgid "Welcome to %s"
-msgstr "Selamat datang di %s"
-
-#: src/widgets/window.vala:32
-msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-msgstr "Pasang Steam, Lutris, Bottle atau Peluncur Game Heroic untuk memulai."
-
-#: src/widgets/window.vala:42
+#: src/widgets/window.vala:40
 #, fuzzy
 msgid "Donate"
 msgstr "Donasi"
 
-#: src/widgets/window.vala:45
+#: src/widgets/window.vala:43
 msgid "_Installed Only"
 msgstr "_Hanya terinstal"
 
-#: src/widgets/window.vala:52
+#: src/widgets/window.vala:50
 msgid "_Keyboard Shortcuts"
 msgstr "_ Pintasan Papan Ketik"
 
-#: src/widgets/window.vala:53
+#: src/widgets/window.vala:51
 msgid "_About ProtonPlus"
 msgstr "_Tentang ProtonPlus"
 
-#: src/widgets/window.vala:60
+#: src/widgets/window.vala:58
 msgid "Main Menu"
 msgstr "Menu Utama"
 
-#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
-#: src/models/launchers/steam.vala:42
+#: src/widgets/window.vala:63
 msgid "Runners"
 msgstr "Runner"
 
-#: src/widgets/window.vala:66
+#: src/widgets/window.vala:64
 msgid "Games"
 msgstr "Permainan"
+
+#: src/widgets/window.vala:93
+msgid "An error ocurred"
+msgstr ""
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "There was an error when trying to load the launchers."
+msgstr "Ada error saat mengambil data dari API GitHub"
+
+#: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
+#: src/widgets/runners/install-dialog.vala:54
+#: src/widgets/runners/upgrade-dialog.vala:56
+#: src/widgets/games/games-box.vala:240
+#: src/widgets/games/mass-edit-dialog.vala:147
+#: src/widgets/games/shortcut-button.vala:38
+#: src/widgets/games/shortcut-button.vala:47
+#: src/widgets/games/launch-options-dialog.vala:57
+#: src/widgets/games/default-tool-dialog.vala:60
+#: src/widgets/games/compatibility-tool-dropdown.vala:75
+msgid "Please report this issue on GitHub."
+msgstr "Silakan laporkan masalah ini di GitHub."
+
+#: src/widgets/window.vala:114
+#, c-format
+msgid "Welcome to %s"
+msgstr "Selamat datang di %s"
+
+#: src/widgets/window.vala:114
+msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
+msgstr "Pasang Steam, Lutris, Bottle atau Peluncur Game Heroic untuk memulai."
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -147,19 +168,6 @@ msgstr "eror"
 #, c-format
 msgid "When trying to remove %s an error occured."
 msgstr "Saat mencoba menghapus %s terjadi kesalahan."
-
-#: src/widgets/runners/remove-dialog.vala:49
-#: src/widgets/runners/install-dialog.vala:54
-#: src/widgets/runners/upgrade-dialog.vala:56
-#: src/widgets/games/games-box.vala:240
-#: src/widgets/games/mass-edit-dialog.vala:147
-#: src/widgets/games/shortcut-button.vala:38
-#: src/widgets/games/shortcut-button.vala:47
-#: src/widgets/games/launch-options-dialog.vala:57
-#: src/widgets/games/default-tool-dialog.vala:60
-#: src/widgets/games/compatibility-tool-dropdown.vala:75
-msgid "Please report this issue on GitHub."
-msgstr "Silakan laporkan masalah ini di GitHub."
 
 #: src/widgets/runners/install-dialog.vala:23
 #: src/widgets/runners/upgrade-dialog.vala:23
@@ -533,76 +541,21 @@ msgstr "Pilih alat kompatibilitas yang diinginkan"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr "Ketika mencoba mengubah alat kompatibilitas %s terjadi kesalahan."
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
-#: src/models/launchers/lutris.vala:36
-msgid "Compatibility tools for running Windows software on Linux."
+#: src/models/runners/steamtinkerlaunch.vala:6
+msgid ""
+"Steam tool for easy, graphical configuration of your other compatibility "
+"tools for both Windows games and native Linux games."
 msgstr ""
-"Alat bantu kompatibilitas untuk menjalankan perangkat lunak Windows di Linux."
+"Alat Steam untuk konfigurasi grafis yang mudah dari alat kompatibilitas Anda "
+"yang lain untuk game Windows dan game Linux asli."
 
-#: src/models/launchers/bottles.vala:32 src/models/launchers/lutris.vala:39
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
-msgstr ""
-"Implementasi berbasis Vulkan untuk Direct3D 8, 9, 10 dan 11 untuk Linux/Wine."
-
-#: src/models/launchers/hgl.vala:29 src/models/launchers/lutris.vala:33
+#: src/main.vala:18
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr ""
 "Alat kompatibilitas dari Valve untuk menjalankan perangkat lunak Windows di "
 "Linux."
 
-#: src/models/launchers/lutris.vala:42
-msgid ""
-"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
-"top of Vulkan."
-msgstr ""
-"Varian VKD3D Wine yang bertujuan untuk mengimplementasikan API Direct3D 12 "
-"secara penuh di atas Vulkan."
-
-#: src/models/runners/boxtron.vala:6
-msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
-msgstr ""
-"Alat kompatibilitas Steam untuk menjalankan game DOS menggunakan DOSBox "
-"untuk Linux."
-
-#: src/models/runners/dxvk-sarek.vala:6
-#: src/models/runners/dxvk-async-sarek.vala:6
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "Berbagai build DXVK yang bekerja dengan versi pra-Vulkan 1.3"
-
-#: src/models/runners/kron4ek-wine-builds-staging-tkg.vala:7
-msgid "Wine build with the Staging patchset and many other useful patches."
-msgstr "Wine dibuat dengan patchset Staging dan banyak patch berguna lainnya."
-
-#: src/models/runners/kron4ek-wine-builds-staging.vala:7
-msgid "Wine build with the Staging patchset."
-msgstr "Wine dibuat dengan patchset Staging."
-
-#: src/models/runners/kron4ek-wine-builds-vanilla.vala:7
-msgid "Wine build compiled from the official WineHQ sources."
-msgstr "Wine build disusun dari sumber resmi WineHQ."
-
-#: src/models/runners/luxtorpeda.vala:6
-msgid ""
-"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
-msgstr ""
-"Luxtorpeda menyediakan mesin game asli Linux untuk game-game tertentu yang "
-"hanya ada di Windows."
-
-#: src/models/runners/northstar-proton.vala:6
-msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr ""
-"Proton yang dibuat khusus untuk menjalankan klien Northstar untuk Titanfall "
-"2."
-
-#: src/models/runners/proton-ge-rstp.vala:6
-msgid ""
-"Steam compatibility tool based on Proton-GE with additional patches to "
-"improve RTSP codecs for VRChat."
-msgstr ""
-"Alat kompatibilitas Steam berdasarkan Proton-GE dengan tambalan tambahan "
-"untuk meningkatkan codec RTSP untuk VRChat."
-
-#: src/models/runners/proton-ge.vala:6
+#: src/main.vala:19
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
@@ -610,20 +563,7 @@ msgstr ""
 "Alat kompatibilitas Steam untuk menjalankan game Windows dengan peningkatan "
 "dari Proton bawaan Valve."
 
-#: src/models/runners/proton-tkg.vala:6
-msgid "Custom Proton build for running Windows games, based on Wine-tkg."
-msgstr ""
-"Proton yang dibuat khusus untuk menjalankan game Windows, berdasarkan Wine-"
-"tkg."
-
-#: src/models/runners/roberta.vala:6
-msgid ""
-"Steam compatibility tool for running adventure games using ScummVM for Linux."
-msgstr ""
-"Alat kompatibilitas Steam untuk menjalankan game petualangan menggunakan "
-"ScummVM untuk Linux."
-
-#: src/models/runners/proton-cachyos.vala:14
+#: src/main.vala:20
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
@@ -631,7 +571,7 @@ msgstr ""
 "Alat kompatibilitas Steam dari distribusi CachyOS Linux untuk menjalankan "
 "game Windows dengan peningkatan dari Proton bawaan Valve."
 
-#: src/models/runners/proton-em.vala:6
+#: src/main.vala:21
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton. By Etaash Mathamsetty adding FSR4 support and wine "
@@ -641,23 +581,102 @@ msgstr ""
 "dari Proton bawaan Valve. Oleh Etaash Mathamsetty yang menambahkan dukungan "
 "FSR4 dan tweak Wine Wayland."
 
-#: src/models/runners/proton-sarek.vala:6
-#: src/models/runners/proton-sarek-async.vala:6
-#, c-format
+#: src/main.vala:22
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr ""
+"Proton yang dibuat khusus untuk menjalankan game Windows, berdasarkan Wine-"
+"tkg."
+
+#: src/main.vala:23
+#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
-"GPUs, with %s."
+"GPUs, with DXVK."
 msgstr ""
 "Alat kompatibilitas Steam berdasarkan Proton-GE dengan modifikasi untuk GPU "
 "yang sangat tua, dengan %s."
 
-#: src/models/runners/steamtinkerlaunch.vala:6
+#: src/main.vala:24
+#, fuzzy
 msgid ""
-"Steam tool for easy, graphical configuration of your other compatibility "
-"tools for both Windows games and native Linux games."
+"Steam compatibility tool based on Proton-GE with modifications for very old "
+"GPUs, with DXVK-Async."
 msgstr ""
-"Alat Steam untuk konfigurasi grafis yang mudah dari alat kompatibilitas Anda "
-"yang lain untuk game Windows dan game Linux asli."
+"Alat kompatibilitas Steam berdasarkan Proton-GE dengan modifikasi untuk GPU "
+"yang sangat tua, dengan %s."
+
+#: src/main.vala:25
+msgid ""
+"Steam compatibility tool based on Proton-GE with additional patches to "
+"improve RTSP codecs for VRChat."
+msgstr ""
+"Alat kompatibilitas Steam berdasarkan Proton-GE dengan tambalan tambahan "
+"untuk meningkatkan codec RTSP untuk VRChat."
+
+#: src/main.vala:26
+msgid "Custom Proton build for running the Northstar client for Titanfall 2."
+msgstr ""
+"Proton yang dibuat khusus untuk menjalankan klien Northstar untuk Titanfall "
+"2."
+
+#: src/main.vala:27
+msgid ""
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
+msgstr ""
+"Luxtorpeda menyediakan mesin game asli Linux untuk game-game tertentu yang "
+"hanya ada di Windows."
+
+#: src/main.vala:28
+msgid ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr ""
+"Alat kompatibilitas Steam untuk menjalankan game petualangan menggunakan "
+"ScummVM untuk Linux."
+
+#: src/main.vala:29
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr ""
+"Alat kompatibilitas Steam untuk menjalankan game DOS menggunakan DOSBox "
+"untuk Linux."
+
+#: src/main.vala:30
+msgid "Compatibility tools for running Windows software on Linux."
+msgstr ""
+"Alat bantu kompatibilitas untuk menjalankan perangkat lunak Windows di Linux."
+
+#: src/main.vala:31
+msgid "Wine build compiled from the official WineHQ sources."
+msgstr "Wine build disusun dari sumber resmi WineHQ."
+
+#: src/main.vala:32
+msgid "Wine build with the Staging patchset."
+msgstr "Wine dibuat dengan patchset Staging."
+
+#: src/main.vala:33
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr "Wine dibuat dengan patchset Staging dan banyak patch berguna lainnya."
+
+#: src/main.vala:34
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgstr ""
+"Implementasi berbasis Vulkan untuk Direct3D 8, 9, 10 dan 11 untuk Linux/Wine."
+
+#: src/main.vala:35
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgstr "Berbagai build DXVK yang bekerja dengan versi pra-Vulkan 1.3"
+
+#: src/main.vala:36
+#, fuzzy
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr "Berbagai build DXVK yang bekerja dengan versi pra-Vulkan 1.3"
+
+#: src/main.vala:37
+msgid ""
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
+msgstr ""
+"Varian VKD3D Wine yang bertujuan untuk mengimplementasikan API Direct3D 12 "
+"secara penuh di atas Vulkan."
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
@@ -780,10 +799,6 @@ msgstr "Keluar"
 #~ msgstr ""
 #~ "Berdasarkan Wine yang dikembangkan oleh Valve Proton Experimental, dibuat "
 #~ "untuk Lutris."
-
-#, fuzzy
-#~ msgid "There was an error while fetching data from the GitHub API."
-#~ msgstr "Ada error saat mengambil data dari API GitHub"
 
 #~ msgid "Cancel the installation"
 #~ msgstr "Batalkan penginstalan"
