--- a/po/pl.po
+++ b/po/pl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-01 20:01-0400\n"
+"POT-Creation-Date: 2025-07-03 15:09-0400\n"
 "PO-Revision-Date: 2025-07-01 23:53+0000\n"
 "Last-Translator: T K <konto2y5@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/protonplus/"
@@ -29,44 +29,66 @@ msgstr "Strona internetowa"
 msgid "Special thanks to"
 msgstr "Specjalne podziękowania dla"
 
-#: src/widgets/window.vala:32
+#: src/widgets/window.vala:40
+msgid "Donate"
+msgstr "Przekaż darowiznę"
+
+#: src/widgets/window.vala:43
+msgid "_Installed Only"
+msgstr "_Tylko zainstalowane"
+
+#: src/widgets/window.vala:50
+msgid "_Keyboard Shortcuts"
+msgstr "_Skróty klawiszowe"
+
+#: src/widgets/window.vala:51
+msgid "_About ProtonPlus"
+msgstr "_O ProtonPlus"
+
+#: src/widgets/window.vala:58
+msgid "Main Menu"
+msgstr "Menu główne"
+
+#: src/widgets/window.vala:63
+msgid "Runners"
+msgstr "Uruchamiacze"
+
+#: src/widgets/window.vala:64
+msgid "Games"
+msgstr ""
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "An error ocurred"
+msgstr "Wystąpił błąd"
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "There was an error when trying to load the launchers."
+msgstr "Wystąpił błąd podczas pobierania danych z API GitHub"
+
+#: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
+#: src/widgets/runners/install-dialog.vala:54
+#: src/widgets/runners/upgrade-dialog.vala:56
+#: src/widgets/games/games-box.vala:240
+#: src/widgets/games/mass-edit-dialog.vala:147
+#: src/widgets/games/shortcut-button.vala:38
+#: src/widgets/games/shortcut-button.vala:47
+#: src/widgets/games/launch-options-dialog.vala:57
+#: src/widgets/games/default-tool-dialog.vala:60
+#: src/widgets/games/compatibility-tool-dropdown.vala:75
+msgid "Please report this issue on GitHub."
+msgstr "Prosimy o zgłoszenie tego błędu na GitHubie."
+
+#: src/widgets/window.vala:114
 #, c-format
 msgid "Welcome to %s"
 msgstr "Witamy w %s"
 
-#: src/widgets/window.vala:32
+#: src/widgets/window.vala:114
 msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
 msgstr ""
 "Aby rozpocząć, zainstaluj Steam, Lutris, Bottles lub Heroic Games Launcher."
-
-#: src/widgets/window.vala:42
-msgid "Donate"
-msgstr "Przekaż darowiznę"
-
-#: src/widgets/window.vala:45
-msgid "_Installed Only"
-msgstr "_Tylko zainstalowane"
-
-#: src/widgets/window.vala:52
-msgid "_Keyboard Shortcuts"
-msgstr "_Skróty klawiszowe"
-
-#: src/widgets/window.vala:53
-msgid "_About ProtonPlus"
-msgstr "_O ProtonPlus"
-
-#: src/widgets/window.vala:60
-msgid "Main Menu"
-msgstr "Menu główne"
-
-#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
-#: src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "Uruchamiacze"
-
-#: src/widgets/window.vala:66
-msgid "Games"
-msgstr ""
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -148,19 +170,6 @@ msgstr "Błąd"
 #, c-format
 msgid "When trying to remove %s an error occured."
 msgstr "Podczas próby usunięcia %s wystąpił błąd."
-
-#: src/widgets/runners/remove-dialog.vala:49
-#: src/widgets/runners/install-dialog.vala:54
-#: src/widgets/runners/upgrade-dialog.vala:56
-#: src/widgets/games/games-box.vala:240
-#: src/widgets/games/mass-edit-dialog.vala:147
-#: src/widgets/games/shortcut-button.vala:38
-#: src/widgets/games/shortcut-button.vala:47
-#: src/widgets/games/launch-options-dialog.vala:57
-#: src/widgets/games/default-tool-dialog.vala:60
-#: src/widgets/games/compatibility-tool-dropdown.vala:75
-msgid "Please report this issue on GitHub."
-msgstr "Prosimy o zgłoszenie tego błędu na GitHubie."
 
 #: src/widgets/runners/install-dialog.vala:23
 #: src/widgets/runners/upgrade-dialog.vala:23
@@ -527,78 +536,19 @@ msgstr "Wybierz żądane narzędzie zgodności"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr "Podczas próby zmiany narzędzia zgodności %s wystąpił błąd."
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
-#: src/models/launchers/lutris.vala:36
-msgid "Compatibility tools for running Windows software on Linux."
+#: src/models/runners/steamtinkerlaunch.vala:6
+msgid ""
+"Steam tool for easy, graphical configuration of your other compatibility "
+"tools for both Windows games and native Linux games."
 msgstr ""
-"Narzędzia kompatybilności do uruchamiania oprogramowania Windows na Linuxie"
 
-#: src/models/launchers/bottles.vala:32 src/models/launchers/lutris.vala:39
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
-msgstr "Oparta na Vulkan implementacja Direct3D 8, 9, 10 i 11 dla Linux/Wine."
-
-#: src/models/launchers/hgl.vala:29 src/models/launchers/lutris.vala:33
+#: src/main.vala:18
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr ""
 "Narzędzia kompatybilności firmy Valve do uruchamiania oprogramowania Windows "
 "w systemie Linux."
 
-#: src/models/launchers/lutris.vala:42
-#, fuzzy
-msgid ""
-"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
-"top of Vulkan."
-msgstr ""
-"Wariant Wine VKD3D, który ma na celu implementację pełnego API Direct3D 12 "
-"na Vulkan."
-
-#: src/models/runners/boxtron.vala:6
-msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
-msgstr ""
-"Narzędzie kompatybilności Steam do uruchamiania gier DOS przy użyciu DOSBox "
-"dla Linuksa."
-
-#: src/models/runners/dxvk-sarek.vala:6
-#: src/models/runners/dxvk-async-sarek.vala:6
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "Kompilacje DXVK działające z wersjami Vulkan wcześniejszymi niż 1.3"
-
-#: src/models/runners/kron4ek-wine-builds-staging-tkg.vala:7
-msgid "Wine build with the Staging patchset and many other useful patches."
-msgstr ""
-"Kompilacja Wine z zestawem łatek Staging i wieloma innymi przydatnymi "
-"łatkami."
-
-#: src/models/runners/kron4ek-wine-builds-staging.vala:7
-msgid "Wine build with the Staging patchset."
-msgstr "Kompilacja Wine z zestawem łatek Staging."
-
-#: src/models/runners/kron4ek-wine-builds-vanilla.vala:7
-msgid "Wine build compiled from the official WineHQ sources."
-msgstr "Kompilacja Wine z oficjalnych źródeł WineHQ."
-
-#: src/models/runners/luxtorpeda.vala:6
-msgid ""
-"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
-msgstr ""
-"Luxtorpeda zapewnia natywne dla Linuksa silniki gier dla niektórych gier "
-"przeznaczonych tylko dla systemu Windows."
-
-#: src/models/runners/northstar-proton.vala:6
-msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr ""
-"Niestandardowa wersja Protona do uruchamiania klienta Northstar dla "
-"Titanfall 2."
-
-#: src/models/runners/proton-ge-rstp.vala:6
-msgid ""
-"Steam compatibility tool based on Proton-GE with additional patches to "
-"improve RTSP codecs for VRChat."
-msgstr ""
-"Narzędzie kompatybilności Steam oparte na Proton-GE z dodatkowymi łatkami "
-"poprawiającymi kodeki RTSP dla VRChat."
-
-#: src/models/runners/proton-ge.vala:6
+#: src/main.vala:19
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
@@ -606,20 +556,7 @@ msgstr ""
 "Narzędzie kompatybilności Steam do uruchamiania gier Windows z ulepszeniami "
 "w stosunku do domyślnego Proton od Valve."
 
-#: src/models/runners/proton-tkg.vala:6
-msgid "Custom Proton build for running Windows games, based on Wine-tkg."
-msgstr ""
-"Niestandardowa kompilacja Proton do uruchamiania gier Windows, oparta na "
-"Wine-tkg."
-
-#: src/models/runners/roberta.vala:6
-msgid ""
-"Steam compatibility tool for running adventure games using ScummVM for Linux."
-msgstr ""
-"Narzędzie zgodności ze Steam do uruchamiania gier przygodowych przy użyciu "
-"ScummVM dla systemu Linux."
-
-#: src/models/runners/proton-cachyos.vala:14
+#: src/main.vala:20
 #, fuzzy
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
@@ -628,7 +565,7 @@ msgstr ""
 "Narzędzie kompatybilności Steam z dystrybucji Linuxa CachyOS do uruchamiania "
 "gier Windows z ulepszeniami w stosunku do domyślnego Proton od Valve."
 
-#: src/models/runners/proton-em.vala:6
+#: src/main.vala:21
 #, fuzzy
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
@@ -639,21 +576,104 @@ msgstr ""
 "w stosunku do domyślnego Proton od Valve. Etaash Mathamsetty dodaje obsługę "
 "FSR4 i poprawki wine wayland."
 
-#: src/models/runners/proton-sarek.vala:6
-#: src/models/runners/proton-sarek-async.vala:6
-#, c-format
+#: src/main.vala:22
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr ""
+"Niestandardowa kompilacja Proton do uruchamiania gier Windows, oparta na "
+"Wine-tkg."
+
+#: src/main.vala:23
+#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
-"GPUs, with %s."
+"GPUs, with DXVK."
 msgstr ""
 "Narzędzie kompatybilności Steam oparte na Proton-GE z modyfikacjami dla "
 "bardzo starych GPU, z %s."
 
-#: src/models/runners/steamtinkerlaunch.vala:6
+#: src/main.vala:24
+#, fuzzy
 msgid ""
-"Steam tool for easy, graphical configuration of your other compatibility "
-"tools for both Windows games and native Linux games."
+"Steam compatibility tool based on Proton-GE with modifications for very old "
+"GPUs, with DXVK-Async."
 msgstr ""
+"Narzędzie kompatybilności Steam oparte na Proton-GE z modyfikacjami dla "
+"bardzo starych GPU, z %s."
+
+#: src/main.vala:25
+msgid ""
+"Steam compatibility tool based on Proton-GE with additional patches to "
+"improve RTSP codecs for VRChat."
+msgstr ""
+"Narzędzie kompatybilności Steam oparte na Proton-GE z dodatkowymi łatkami "
+"poprawiającymi kodeki RTSP dla VRChat."
+
+#: src/main.vala:26
+msgid "Custom Proton build for running the Northstar client for Titanfall 2."
+msgstr ""
+"Niestandardowa wersja Protona do uruchamiania klienta Northstar dla "
+"Titanfall 2."
+
+#: src/main.vala:27
+msgid ""
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
+msgstr ""
+"Luxtorpeda zapewnia natywne dla Linuksa silniki gier dla niektórych gier "
+"przeznaczonych tylko dla systemu Windows."
+
+#: src/main.vala:28
+msgid ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr ""
+"Narzędzie zgodności ze Steam do uruchamiania gier przygodowych przy użyciu "
+"ScummVM dla systemu Linux."
+
+#: src/main.vala:29
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr ""
+"Narzędzie kompatybilności Steam do uruchamiania gier DOS przy użyciu DOSBox "
+"dla Linuksa."
+
+#: src/main.vala:30
+msgid "Compatibility tools for running Windows software on Linux."
+msgstr ""
+"Narzędzia kompatybilności do uruchamiania oprogramowania Windows na Linuxie"
+
+#: src/main.vala:31
+msgid "Wine build compiled from the official WineHQ sources."
+msgstr "Kompilacja Wine z oficjalnych źródeł WineHQ."
+
+#: src/main.vala:32
+msgid "Wine build with the Staging patchset."
+msgstr "Kompilacja Wine z zestawem łatek Staging."
+
+#: src/main.vala:33
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr ""
+"Kompilacja Wine z zestawem łatek Staging i wieloma innymi przydatnymi "
+"łatkami."
+
+#: src/main.vala:34
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgstr "Oparta na Vulkan implementacja Direct3D 8, 9, 10 i 11 dla Linux/Wine."
+
+#: src/main.vala:35
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgstr "Kompilacje DXVK działające z wersjami Vulkan wcześniejszymi niż 1.3"
+
+#: src/main.vala:36
+#, fuzzy
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr "Kompilacje DXVK działające z wersjami Vulkan wcześniejszymi niż 1.3"
+
+#: src/main.vala:37
+#, fuzzy
+msgid ""
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
+msgstr ""
+"Wariant Wine VKD3D, który ma na celu implementację pełnego API Direct3D 12 "
+"na Vulkan."
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
@@ -729,10 +749,6 @@ msgstr ""
 #, fuzzy
 #~ msgid "Show Installed"
 #~ msgstr "Tylko zainstalowane"
-
-#, fuzzy
-#~ msgid "There was an error while fetching data from the GitHub API."
-#~ msgstr "Wystąpił błąd podczas pobierania danych z API GitHub"
 
 #~ msgid "Cancel the installation"
 #~ msgstr "Anuluj instalację"
