--- a/po/zh.po
+++ b/po/zh.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-01 20:01-0400\n"
+"POT-Creation-Date: 2025-07-03 15:09-0400\n"
 "PO-Revision-Date: 2025-03-12 09:23+0800\n"
 "Last-Translator: Zemin Ha <ruojiner@hotmail.com>\n"
 "Language-Team: Chinese <kde-i18n-doc@kde.org>\n"
@@ -28,44 +28,65 @@ msgstr ""
 msgid "Special thanks to"
 msgstr "特别感谢"
 
-#: src/widgets/window.vala:32
-#, fuzzy, c-format
-msgid "Welcome to %s"
-msgstr "欢迎来到 %s"
-
-#: src/widgets/window.vala:32
-msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-msgstr "安装Steam，Lutris，Bottles或Heroic Game Launcher 即可开始使用"
-
-#: src/widgets/window.vala:42
+#: src/widgets/window.vala:40
 #, fuzzy
 msgid "Donate"
 msgstr "捐赠"
 
-#: src/widgets/window.vala:45
+#: src/widgets/window.vala:43
 msgid "_Installed Only"
 msgstr "_只显示已安装的"
 
-#: src/widgets/window.vala:52
+#: src/widgets/window.vala:50
 msgid "_Keyboard Shortcuts"
 msgstr "_键盘快捷方式"
 
-#: src/widgets/window.vala:53
+#: src/widgets/window.vala:51
 msgid "_About ProtonPlus"
 msgstr "_关于 ProtonPlus"
 
-#: src/widgets/window.vala:60
+#: src/widgets/window.vala:58
 msgid "Main Menu"
 msgstr "主菜单"
 
-#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
-#: src/models/launchers/steam.vala:42
+#: src/widgets/window.vala:63
 msgid "Runners"
 msgstr "启动器"
 
-#: src/widgets/window.vala:66
+#: src/widgets/window.vala:64
 msgid "Games"
 msgstr "游戏"
+
+#: src/widgets/window.vala:93
+msgid "An error ocurred"
+msgstr ""
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "There was an error when trying to load the launchers."
+msgstr "当从GitHub API获取数据时出现错误"
+
+#: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
+#: src/widgets/runners/install-dialog.vala:54
+#: src/widgets/runners/upgrade-dialog.vala:56
+#: src/widgets/games/games-box.vala:240
+#: src/widgets/games/mass-edit-dialog.vala:147
+#: src/widgets/games/shortcut-button.vala:38
+#: src/widgets/games/shortcut-button.vala:47
+#: src/widgets/games/launch-options-dialog.vala:57
+#: src/widgets/games/default-tool-dialog.vala:60
+#: src/widgets/games/compatibility-tool-dropdown.vala:75
+msgid "Please report this issue on GitHub."
+msgstr ""
+
+#: src/widgets/window.vala:114
+#, fuzzy, c-format
+msgid "Welcome to %s"
+msgstr "欢迎来到 %s"
+
+#: src/widgets/window.vala:114
+msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
+msgstr "安装Steam，Lutris，Bottles或Heroic Game Launcher 即可开始使用"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -147,19 +168,6 @@ msgstr ""
 #: src/widgets/runners/remove-dialog.vala:49
 #, c-format
 msgid "When trying to remove %s an error occured."
-msgstr ""
-
-#: src/widgets/runners/remove-dialog.vala:49
-#: src/widgets/runners/install-dialog.vala:54
-#: src/widgets/runners/upgrade-dialog.vala:56
-#: src/widgets/games/games-box.vala:240
-#: src/widgets/games/mass-edit-dialog.vala:147
-#: src/widgets/games/shortcut-button.vala:38
-#: src/widgets/games/shortcut-button.vala:47
-#: src/widgets/games/launch-options-dialog.vala:57
-#: src/widgets/games/default-tool-dialog.vala:60
-#: src/widgets/games/compatibility-tool-dropdown.vala:75
-msgid "Please report this issue on GitHub."
 msgstr ""
 
 #: src/widgets/runners/install-dialog.vala:23
@@ -539,87 +547,33 @@ msgstr "兼容性工具"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr ""
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
-#: src/models/launchers/lutris.vala:36
-msgid "Compatibility tools for running Windows software on Linux."
-msgstr "在 Linux 上运行 Windows 游戏和软件的兼容性工具"
+#: src/models/runners/steamtinkerlaunch.vala:6
+msgid ""
+"Steam tool for easy, graphical configuration of your other compatibility "
+"tools for both Windows games and native Linux games."
+msgstr ""
+"Steam 工具，用于轻松、图形化地配置您的其他兼容性 Windows 游戏和原生 Linux 游"
+"戏的工具"
 
-#: src/models/launchers/bottles.vala:32 src/models/launchers/lutris.vala:39
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
-msgstr "Linux/Wine 中Direct3D 8、9、10和11的基于 Vulkan 的实现"
-
-#: src/models/launchers/hgl.vala:29 src/models/launchers/lutris.vala:33
+#: src/main.vala:18
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr "在 Linux 上运行 Windows 游戏和软件的兼容性工具"
 
-#: src/models/launchers/lutris.vala:42
-msgid ""
-"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
-"top of Vulkan."
-msgstr "Wine VKD3D 的分支，旨在 Vulkan 之上实现完整的Direct3D 12API"
-
-#: src/models/runners/boxtron.vala:6
-msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
-msgstr "Steam Play 兼容性工具，可使用原生 Linux DOSBox 运行 DOS 游戏"
-
-#: src/models/runners/dxvk-sarek.vala:6
-#: src/models/runners/dxvk-async-sarek.vala:6
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "适用于Vulkan 1.3之前版本的DXVK构建"
-
-#: src/models/runners/kron4ek-wine-builds-staging-tkg.vala:7
-msgid "Wine build with the Staging patchset and many other useful patches."
-msgstr "应用了 Staging 补丁集以及许多其他有用的补丁的 Wine 构建"
-
-#: src/models/runners/kron4ek-wine-builds-staging.vala:7
-msgid "Wine build with the Staging patchset."
-msgstr "应用了 Staging 补丁集的 Wine 构建"
-
-#: src/models/runners/kron4ek-wine-builds-vanilla.vala:7
-msgid "Wine build compiled from the official WineHQ sources."
-msgstr "从官方 WineHQ 源编译的 Wine 构建"
-
-#: src/models/runners/luxtorpeda.vala:6
-msgid ""
-"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
-msgstr "Luxtorpeda 为特定的 Windows 游戏提供 Linux 原生游戏引擎"
-
-#: src/models/runners/northstar-proton.vala:6
-msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr "为运行 Titanfall 2的 Northstar 启动器定制的 Proton 构建"
-
-#: src/models/runners/proton-ge-rstp.vala:6
-msgid ""
-"Steam compatibility tool based on Proton-GE with additional patches to "
-"improve RTSP codecs for VRChat."
-msgstr ""
-"基于 Proton GE 的 Steam 兼容性工具，带有额外的补丁改进 VRChat 的 RTSP 编解码"
-"器。"
-
-#: src/models/runners/proton-ge.vala:6
+#: src/main.vala:19
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
 msgstr ""
 "用于运行 Windows 游戏的 Steam 兼容性工具，对 Valve 默认的 Proton 进行了改进"
 
-#: src/models/runners/proton-tkg.vala:6
-msgid "Custom Proton build for running Windows games, based on Wine-tkg."
-msgstr "为运行 Windows 游戏定制的 Proton 构建，用 Wine-tkg 构建系统构建"
-
-#: src/models/runners/roberta.vala:6
-msgid ""
-"Steam compatibility tool for running adventure games using ScummVM for Linux."
-msgstr "Steam Play 兼容性工具，可使用原生 Linux ScummVM 运行冒险游戏"
-
-#: src/models/runners/proton-cachyos.vala:14
+#: src/main.vala:20
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
 msgstr ""
 "用于运行 Windows 游戏的 Steam 兼容性工具，对 Valve 默认的 Proton 进行了改进"
 
-#: src/models/runners/proton-em.vala:6
+#: src/main.vala:21
 #, fuzzy
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
@@ -628,21 +582,84 @@ msgid ""
 msgstr ""
 "用于运行 Windows 游戏的 Steam 兼容性工具，对 Valve 默认的 Proton 进行了改进"
 
-#: src/models/runners/proton-sarek.vala:6
-#: src/models/runners/proton-sarek-async.vala:6
-#, c-format
+#: src/main.vala:22
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr "为运行 Windows 游戏定制的 Proton 构建，用 Wine-tkg 构建系统构建"
+
+#: src/main.vala:23
+#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
-"GPUs, with %s."
+"GPUs, with DXVK."
 msgstr "基于Proton GE的蒸汽兼容性工具，对非常旧的GPU进行了优化，带 %s"
 
-#: src/models/runners/steamtinkerlaunch.vala:6
+#: src/main.vala:24
+#, fuzzy
 msgid ""
-"Steam tool for easy, graphical configuration of your other compatibility "
-"tools for both Windows games and native Linux games."
+"Steam compatibility tool based on Proton-GE with modifications for very old "
+"GPUs, with DXVK-Async."
+msgstr "基于Proton GE的蒸汽兼容性工具，对非常旧的GPU进行了优化，带 %s"
+
+#: src/main.vala:25
+msgid ""
+"Steam compatibility tool based on Proton-GE with additional patches to "
+"improve RTSP codecs for VRChat."
 msgstr ""
-"Steam 工具，用于轻松、图形化地配置您的其他兼容性 Windows 游戏和原生 Linux 游"
-"戏的工具"
+"基于 Proton GE 的 Steam 兼容性工具，带有额外的补丁改进 VRChat 的 RTSP 编解码"
+"器。"
+
+#: src/main.vala:26
+msgid "Custom Proton build for running the Northstar client for Titanfall 2."
+msgstr "为运行 Titanfall 2的 Northstar 启动器定制的 Proton 构建"
+
+#: src/main.vala:27
+msgid ""
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
+msgstr "Luxtorpeda 为特定的 Windows 游戏提供 Linux 原生游戏引擎"
+
+#: src/main.vala:28
+msgid ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr "Steam Play 兼容性工具，可使用原生 Linux ScummVM 运行冒险游戏"
+
+#: src/main.vala:29
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr "Steam Play 兼容性工具，可使用原生 Linux DOSBox 运行 DOS 游戏"
+
+#: src/main.vala:30
+msgid "Compatibility tools for running Windows software on Linux."
+msgstr "在 Linux 上运行 Windows 游戏和软件的兼容性工具"
+
+#: src/main.vala:31
+msgid "Wine build compiled from the official WineHQ sources."
+msgstr "从官方 WineHQ 源编译的 Wine 构建"
+
+#: src/main.vala:32
+msgid "Wine build with the Staging patchset."
+msgstr "应用了 Staging 补丁集的 Wine 构建"
+
+#: src/main.vala:33
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr "应用了 Staging 补丁集以及许多其他有用的补丁的 Wine 构建"
+
+#: src/main.vala:34
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgstr "Linux/Wine 中Direct3D 8、9、10和11的基于 Vulkan 的实现"
+
+#: src/main.vala:35
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgstr "适用于Vulkan 1.3之前版本的DXVK构建"
+
+#: src/main.vala:36
+#, fuzzy
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr "适用于Vulkan 1.3之前版本的DXVK构建"
+
+#: src/main.vala:37
+msgid ""
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
+msgstr "Wine VKD3D 的分支，旨在 Vulkan 之上实现完整的Direct3D 12API"
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
@@ -749,10 +766,6 @@ msgstr "退出"
 #~ msgid ""
 #~ "Based on Valve Proton Experimental's bleeding-edge Wine, built for Lutris."
 #~ msgstr "基于Valve的Proton实验性的前沿Wine，为Lutris构建"
-
-#, fuzzy
-#~ msgid "There was an error while fetching data from the GitHub API."
-#~ msgstr "当从GitHub API获取数据时出现错误"
 
 #~ msgid "Cancel the installation"
 #~ msgstr "取消安装"
