--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-01 20:01-0400\n"
+"POT-Creation-Date: 2025-07-03 15:09-0400\n"
 "PO-Revision-Date: 2025-07-02 00:32+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
 "Language-Team: CodeBay.IN\n"
@@ -29,43 +29,64 @@ msgstr "網站"
 msgid "Special thanks to"
 msgstr "特別感謝"
 
-#: src/widgets/window.vala:32
+#: src/widgets/window.vala:40
+msgid "Donate"
+msgstr "捐贈"
+
+#: src/widgets/window.vala:43
+msgid "_Installed Only"
+msgstr "僅顯示已安裝的(_I)"
+
+#: src/widgets/window.vala:50
+msgid "_Keyboard Shortcuts"
+msgstr "鍵盤捷徑鍵(_K)"
+
+#: src/widgets/window.vala:51
+msgid "_About ProtonPlus"
+msgstr "關於 ProtonPlus(_A)"
+
+#: src/widgets/window.vala:58
+msgid "Main Menu"
+msgstr "主選單"
+
+#: src/widgets/window.vala:63
+msgid "Runners"
+msgstr "運行器"
+
+#: src/widgets/window.vala:64
+msgid "Games"
+msgstr "遊戲庫"
+
+#: src/widgets/window.vala:93
+#, fuzzy
+msgid "An error ocurred"
+msgstr "發生錯誤"
+
+#: src/widgets/window.vala:93
+msgid "There was an error when trying to load the launchers."
+msgstr ""
+
+#: src/widgets/window.vala:93 src/widgets/runners/remove-dialog.vala:49
+#: src/widgets/runners/install-dialog.vala:54
+#: src/widgets/runners/upgrade-dialog.vala:56
+#: src/widgets/games/games-box.vala:240
+#: src/widgets/games/mass-edit-dialog.vala:147
+#: src/widgets/games/shortcut-button.vala:38
+#: src/widgets/games/shortcut-button.vala:47
+#: src/widgets/games/launch-options-dialog.vala:57
+#: src/widgets/games/default-tool-dialog.vala:60
+#: src/widgets/games/compatibility-tool-dropdown.vala:75
+msgid "Please report this issue on GitHub."
+msgstr "請在 GitHub 上回報此問題。"
+
+#: src/widgets/window.vala:114
 #, c-format
 msgid "Welcome to %s"
 msgstr "歡迎來到 %s"
 
-#: src/widgets/window.vala:32
+#: src/widgets/window.vala:114
 msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
 msgstr "請安裝 Steam、Lutris、Bottles 或 Heroic Games Launcher 以開始使用。"
-
-#: src/widgets/window.vala:42
-msgid "Donate"
-msgstr "捐贈"
-
-#: src/widgets/window.vala:45
-msgid "_Installed Only"
-msgstr "僅顯示已安裝的(_I)"
-
-#: src/widgets/window.vala:52
-msgid "_Keyboard Shortcuts"
-msgstr "鍵盤捷徑鍵(_K)"
-
-#: src/widgets/window.vala:53
-msgid "_About ProtonPlus"
-msgstr "關於 ProtonPlus(_A)"
-
-#: src/widgets/window.vala:60
-msgid "Main Menu"
-msgstr "主選單"
-
-#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
-#: src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "運行器"
-
-#: src/widgets/window.vala:66
-msgid "Games"
-msgstr "遊戲庫"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -147,19 +168,6 @@ msgstr "錯誤"
 #, c-format
 msgid "When trying to remove %s an error occured."
 msgstr "嘗試移除 %s 時發生錯誤。"
-
-#: src/widgets/runners/remove-dialog.vala:49
-#: src/widgets/runners/install-dialog.vala:54
-#: src/widgets/runners/upgrade-dialog.vala:56
-#: src/widgets/games/games-box.vala:240
-#: src/widgets/games/mass-edit-dialog.vala:147
-#: src/widgets/games/shortcut-button.vala:38
-#: src/widgets/games/shortcut-button.vala:47
-#: src/widgets/games/launch-options-dialog.vala:57
-#: src/widgets/games/default-tool-dialog.vala:60
-#: src/widgets/games/compatibility-tool-dropdown.vala:75
-msgid "Please report this issue on GitHub."
-msgstr "請在 GitHub 上回報此問題。"
 
 #: src/widgets/runners/install-dialog.vala:23
 #: src/widgets/runners/upgrade-dialog.vala:23
@@ -514,80 +522,26 @@ msgstr "選擇所需的相容性工具"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr "嘗試變更 %s 的相容性工具時發生錯誤。"
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
-#: src/models/launchers/lutris.vala:36
-msgid "Compatibility tools for running Windows software on Linux."
-msgstr "在 Linux 上運行 Windows 軟體的相容性工具。"
+#: src/models/runners/steamtinkerlaunch.vala:6
+msgid ""
+"Steam tool for easy, graphical configuration of your other compatibility "
+"tools for both Windows games and native Linux games."
+msgstr ""
+"讓您能以圖形介面輕鬆設定的 Steam 工具，專門調整用於 Windows 遊戲和原生 Linux "
+"遊戲的各種相容性工具。"
 
-#: src/models/launchers/bottles.vala:32 src/models/launchers/lutris.vala:39
-msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
-msgstr "適用於 Linux/Wine 的，基於 Vulkan 的 Direct3D 8、9、10 和 11 的實作。"
-
-#: src/models/launchers/hgl.vala:29 src/models/launchers/lutris.vala:33
+#: src/main.vala:18
 msgid "Compatibility tools by Valve for running Windows software on Linux."
 msgstr "由 Valve 提供的，在 Linux 上運行 Windows 軟體的相容性工具。"
 
-#: src/models/launchers/lutris.vala:42
-msgid ""
-"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
-"top of Vulkan."
-msgstr "Wine VKD3D 的特化版，旨在 Vulkan 之上實作完整的 Direct3D 12 API。"
-
-#: src/models/runners/boxtron.vala:6
-msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
-msgstr "使用 Linux 版 DOSBox 運行 DOS 遊戲的 Steam 相容性工具。"
-
-#: src/models/runners/dxvk-sarek.vala:6
-#: src/models/runners/dxvk-async-sarek.vala:6
-msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
-msgstr "適用於 Vulkan 1.3 之前的 DXVK 建構版本。"
-
-#: src/models/runners/kron4ek-wine-builds-staging-tkg.vala:7
-msgid "Wine build with the Staging patchset and many other useful patches."
-msgstr "包含 Staging 修補程式集，以及多項實用修補程式的 Wine 建構版本。"
-
-#: src/models/runners/kron4ek-wine-builds-staging.vala:7
-msgid "Wine build with the Staging patchset."
-msgstr "包含 Staging 修補程式集的 Wine 建構版本。"
-
-#: src/models/runners/kron4ek-wine-builds-vanilla.vala:7
-msgid "Wine build compiled from the official WineHQ sources."
-msgstr "從官方 WineHQ 原始碼編譯的 Wine 建構版本。"
-
-#: src/models/runners/luxtorpeda.vala:6
-msgid ""
-"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
-msgstr "Luxtorpeda 能為特定的 Windows 專屬遊戲提供 Linux 原生遊戲引擎。"
-
-#: src/models/runners/northstar-proton.vala:6
-msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr "運行 Titanfall 2 Northstar 用戶端的自訂 Proton 建構版本。"
-
-#: src/models/runners/proton-ge-rstp.vala:6
-msgid ""
-"Steam compatibility tool based on Proton-GE with additional patches to "
-"improve RTSP codecs for VRChat."
-msgstr ""
-"基於 Proton-GE 的 Steam 相容性工具，包含額外的修補程式以改善 VRChat 的 RTSP "
-"編解碼器。"
-
-#: src/models/runners/proton-ge.vala:6
+#: src/main.vala:19
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
 msgstr ""
 "運行 Windows 遊戲的 Steam 相容性工具，具有優於 Valve 預設 Proton 的改進功能。"
 
-#: src/models/runners/proton-tkg.vala:6
-msgid "Custom Proton build for running Windows games, based on Wine-tkg."
-msgstr "基於 Wine-tkg 的，運行 Windows 遊戲的自訂 Proton 建構版本。"
-
-#: src/models/runners/roberta.vala:6
-msgid ""
-"Steam compatibility tool for running adventure games using ScummVM for Linux."
-msgstr "使用 Linux 版 ScummVM 運行冒險遊戲的 Steam 相容性工具。"
-
-#: src/models/runners/proton-cachyos.vala:14
+#: src/main.vala:20
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
@@ -595,7 +549,7 @@ msgstr ""
 "CachyOS Linux 發行版的，運行 Windows 遊戲的 Steam 相容性工具，具有優於 Valve "
 "預設 Proton 的改進功能。"
 
-#: src/models/runners/proton-em.vala:6
+#: src/main.vala:21
 msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton. By Etaash Mathamsetty adding FSR4 support and wine "
@@ -604,23 +558,88 @@ msgstr ""
 "運行 Windows 遊戲的 Steam 相容性工具，具有優於 Valve 預設 Proton 的改進功能。"
 "由 Etaash Mathamsetty 新增 FSR4 支援和 Wine Wayland 調整。"
 
-#: src/models/runners/proton-sarek.vala:6
-#: src/models/runners/proton-sarek-async.vala:6
-#, c-format
+#: src/main.vala:22
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr "基於 Wine-tkg 的，運行 Windows 遊戲的自訂 Proton 建構版本。"
+
+#: src/main.vala:23
+#, fuzzy
 msgid ""
 "Steam compatibility tool based on Proton-GE with modifications for very old "
-"GPUs, with %s."
+"GPUs, with DXVK."
 msgstr ""
 "基於 Proton-GE 的 Steam 相容性工具，包含對非常舊的 GPU 進行的修改，並包含 "
 "%s。"
 
-#: src/models/runners/steamtinkerlaunch.vala:6
+#: src/main.vala:24
+#, fuzzy
 msgid ""
-"Steam tool for easy, graphical configuration of your other compatibility "
-"tools for both Windows games and native Linux games."
+"Steam compatibility tool based on Proton-GE with modifications for very old "
+"GPUs, with DXVK-Async."
 msgstr ""
-"讓您能以圖形介面輕鬆設定的 Steam 工具，專門調整用於 Windows 遊戲和原生 Linux "
-"遊戲的各種相容性工具。"
+"基於 Proton-GE 的 Steam 相容性工具，包含對非常舊的 GPU 進行的修改，並包含 "
+"%s。"
+
+#: src/main.vala:25
+msgid ""
+"Steam compatibility tool based on Proton-GE with additional patches to "
+"improve RTSP codecs for VRChat."
+msgstr ""
+"基於 Proton-GE 的 Steam 相容性工具，包含額外的修補程式以改善 VRChat 的 RTSP "
+"編解碼器。"
+
+#: src/main.vala:26
+msgid "Custom Proton build for running the Northstar client for Titanfall 2."
+msgstr "運行 Titanfall 2 Northstar 用戶端的自訂 Proton 建構版本。"
+
+#: src/main.vala:27
+msgid ""
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
+msgstr "Luxtorpeda 能為特定的 Windows 專屬遊戲提供 Linux 原生遊戲引擎。"
+
+#: src/main.vala:28
+msgid ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr "使用 Linux 版 ScummVM 運行冒險遊戲的 Steam 相容性工具。"
+
+#: src/main.vala:29
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr "使用 Linux 版 DOSBox 運行 DOS 遊戲的 Steam 相容性工具。"
+
+#: src/main.vala:30
+msgid "Compatibility tools for running Windows software on Linux."
+msgstr "在 Linux 上運行 Windows 軟體的相容性工具。"
+
+#: src/main.vala:31
+msgid "Wine build compiled from the official WineHQ sources."
+msgstr "從官方 WineHQ 原始碼編譯的 Wine 建構版本。"
+
+#: src/main.vala:32
+msgid "Wine build with the Staging patchset."
+msgstr "包含 Staging 修補程式集的 Wine 建構版本。"
+
+#: src/main.vala:33
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr "包含 Staging 修補程式集，以及多項實用修補程式的 Wine 建構版本。"
+
+#: src/main.vala:34
+msgid "Vulkan-based implementation of Direct3D 8, 9, 10 and 11 for Linux/Wine."
+msgstr "適用於 Linux/Wine 的，基於 Vulkan 的 Direct3D 8、9、10 和 11 的實作。"
+
+#: src/main.vala:35
+msgid "DXVK Builds that work with pre-Vulkan 1.3 versions"
+msgstr "適用於 Vulkan 1.3 之前的 DXVK 建構版本。"
+
+#: src/main.vala:36
+#, fuzzy
+msgid "DXVK Async Builds that work with pre-Vulkan 1.3 versions"
+msgstr "適用於 Vulkan 1.3 之前的 DXVK 建構版本。"
+
+#: src/main.vala:37
+msgid ""
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
+msgstr "Wine VKD3D 的特化版，旨在 Vulkan 之上實作完整的 Direct3D 12 API。"
 
 #: data/ui/gtk/help-overlay.ui:11
 msgctxt "shortcut window"
